--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Report/**
 STDF/**
 **test**
 **/post.json
-**/cfg.txt
+**/cfg.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -168,3 +168,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+src/jupiter/cfg.json
+src/post.json
